--- a/SYMBOLS/README
+++ b/SYMBOLS/README
@@ -140,6 +140,19 @@ NOTES
         1. note : log _ a e generates an error
         2. open Syntaxer_NFA_settings.js and set line 59136 (underscore) = 1
         3. refresh page
+    Connectives are aka Operators
+    CNF SAT Solvers are considered fastest
+    Are CNFs fast because they concatenate over bitfields / hash into bitmaps, 
+        which also can be matched to RegularExpressions,
+        which also maps to the English saying: 
+            I don't know the solution, 
+            but I'll recognize it when I see it
+            
+
+CODE SNIPE
+    var a={a:1,b:2}
+    Object.prototype.Clone = function(){ return this }
+    Clone.call(a)
 
 
 TODO - e solver
@@ -164,5 +177,5 @@ TODO - euclid
     Emit pretty-text from all windows to cssWindow
     
 HOWTO
-    &#x222b; (html) > \u222b (JavaScript)
+    &#x222b; (html) >> \u222b (JavaScript)
 
