--- a/SYMBOLS/README
+++ b/SYMBOLS/README
@@ -70,7 +70,7 @@ x + y + z + b + c = d
 
 HOW EUCLID WORKS (HOW EUCLID BUILDS INTERNAL ASSOCIATIONS..
 
-    Euclid maps to a network topology ontology
+    Euclid maps onto a network topology
 
         Example
 
